--- a/app/globals.css
+++ b/app/globals.css
@@ -60,7 +60,7 @@
 }
 
 .landing-hero-container {
-  background-image: url("/hero_mobile_section.webp");
+  background-image: url("/images/landing-page/hero_mobile_section.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -68,6 +68,6 @@
 
 @media (min-width: 1024px) {
   .landing-hero-container {
-    background-image: url("/hero_section.webp");
+    background-image: url("/images/landing-page/hero_section.webp");
   }
 }
